--- a/species.css
+++ b/species.css
@@ -113,3 +113,21 @@
 .button{
     font-size: 50px;
 }
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #000000;
+	text-align: center;
+}
+li a {
+	float: left;
+	color: white;
+	text-align: center;
+	padding: 25px;
+	text-decoration: none;
+}
+li a:hover {
+	background-color: #202020;
+}
