--- a/css/donation.css
+++ b/css/donation.css
@@ -10,6 +10,7 @@
 	width: 100%;
 	height: 1550px;
 	background-color: white;
+	margin-top: 86px;
 }
 
 .border {
@@ -63,27 +64,37 @@
 	text-indent: 2em;
 }
 body {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
 }
+
 ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #000000;
-	text-align: center;
+    position: fixed;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000000;
+    text-align: center;
+    width: 100%;
 }
+
+li {
+    float: left;
+}
+
 li a {
-	float: left;
-	color: white;
-	text-align: center;
-	padding: 25px;
-	text-decoration: none;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 25px;
+    text-decoration: none;
 }
+
 li a:hover {
-	background-color: #202020;
+    background-color: #202020;
 }
+
 .donations{
     text-align: center;
 
