--- a/css/howTohelp.css
+++ b/css/howTohelp.css
@@ -8,68 +8,30 @@
 	text-align: left;
 	display: inline-block;
 	width: 100%;
-	height: 1550px;
 	background-color: white;
-	margin-top: 86px;
+
 }
 
-.border {
-	display: inline-block;
-	width: 100%;
-	height: 1550px;
-	text-align: center;
-}
-
-.TitleName1 {
-	color: black;
-	font-size: 35px;
-	text-align: left;
-	margin-left: 100px;
-}
-
-.TitleBlock1 {
-	display: inline-block;
-	width: 100%;
-	height: 580px;
-	background-color: white;
-}
-
-.titleBlock img {
-	display: block;
-	width: 100%;
-	float: left;
-}
-
-.frogBlock img {
-	display: inline;
-	width: 40%;
-	float: right;
-	margin-right: 75px;
-}
-
-.text {
-	color: black;
-	text-align: left;
-	font-size: 23px;
-	margin-left: 100px;
-	margin-right: 900px;
-}
 
 .button {
 	font-size: 30px;
 	color: white;
 }
 
-#p0 {
-	text-indent: 2em;
-}
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
 }
 
-ul {
-    position: fixed;
+a {
+    background-color: #000000;
+    text-align: center;
+}
+li#nav {
+    float: left;
+}
+ul#nav {
+	position: sticky;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -78,11 +40,6 @@ ul {
     text-align: center;
     width: 100%;
 }
-
-li {
-    float: left;
-}
-
 li a {
     display: inline-block;
     color: white;
@@ -106,14 +63,40 @@ input{
 	margin: 4px 2px;
 	cursor: pointer;
   }
-	
-#ocean{
+
+input#ocean{
 	background-color: rgb(58, 133, 198);
 }
+ul.a{
+	list-style-type: circle;
+	list-style-position: inside;
+}
+a.ReadMore{
+	background-color: #fff;
+}
+
 #forest{
 	background-color: rgb(29, 158, 70);
 }
-div{
-    width:75%;
-    margin: auto
+
+#others{
+	background-color: rgb(141, 158, 29);
 }
+
+div#info{
+	text-indent: 30px;
+}
+
+
+div img{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 40%;
+}
+
+img.header{
+	width:100%
+}
+
+
