--- a/css/donation.css
+++ b/css/donation.css
@@ -1,4 +1,4 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -63,39 +63,103 @@
 #p0 {
 	text-indent: 2em;
 }
+ul {
+	position: fixed;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #000000;
+	text-align: center;
+	width: 100%;
+}
+
+li {
+	float: left;
+}
+
+li a {
+	display: inline-block;
+	color: white;
+	text-align: center;
+	padding: 25px;
+	text-decoration: none;
+}
+
+li a:hover {
+	background-color: #202020;
+}
+
+.donations {
+	text-align: center;
+}
+
+button {
+	background-color: orangered;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+}
+.gallery1{
+	text-align: center;
+}
+.gallery2{
+	text-align: center;
+}
+.gallery3{
+	text-align: center;
+}
+.gallery4{
+	text-align: center;
+}
+.gallery5{
+	text-align: center;
+}
+.last{
+	text-align: center;
+}
+.button1 {
+	font-size: 30px;
+	color: white;
+	text-align: center;
+}
+.button2 {
+	font-size: 30px;
+	color: white;
+	text-align: center;
+}
+.button3 {
+	font-size: 30px;
+	color: white;
+	text-align: center;
+}
+.button4 {
+	font-size: 30px;
+	color: white;
+	text-align: center;
+}
+.button5 {
+	font-size: 30px;
+	color: white;
+	text-align: center;
+}
+.button6 {
+	font-size: 10px;
+	color: white;
+	text-align: center;
+	width: 100%;
+}
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
 }
-
-ul {
-    position: fixed;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #000000;
-    text-align: center;
-    width: 100%;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 25px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #202020;
-}
-
-.donations{
-    text-align: center;
-
-}
+.button6:hover {
+	background-color: #ddd;
+	color: black;
+  }
