--- a/css/donation.css
+++ b/css/donation.css
@@ -10,7 +10,7 @@
 	width: 100%;
 	height: 1550px;
 	background-color: white;
-	margin-top: 86px;
+	margin-top: 110px;
 }
 
 .border {
@@ -64,14 +64,15 @@
 	text-indent: 2em;
 }
 ul {
-	position: fixed;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #000000;
-	text-align: center;
-	width: 100%;
+    position: fixed;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000000;
+    text-align: center;
+    width: 100%;
+	max-height: 86px;
 }
 
 li {
