--- a/css/howTohelp.css
+++ b/css/howTohelp.css
@@ -39,6 +39,7 @@ ul#nav {
     background-color: #000000;
     text-align: center;
     width: 100%;
+	max-height: 86px;
 }
 li a {
     display: inline-block;
