--- a/css/index.css
+++ b/css/index.css
@@ -2,14 +2,56 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	background-color: #EEEEEE;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+}
+
+ul {
+    position: fixed;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000000;
+    text-align: center;
+    width: 100%;
+	max-height: 86px;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 25px;
+    text-decoration: none;
+	background-color: #000000;
+}
+
+li a:hover {
+    background-color: #202020;
 }
 
 .container {
 	text-align: left;
-	display: inline-block;
+	display: block;
 	width: 100%;
 	height: 1550px;
-	background-color: white;
+	background-color: #EEEEEE;
+}
+
+.titleBlock img {
+	display: block;
+	margin-top: 86px;
+	width: 100%;
+	float: right;
 }
 
 .border {
@@ -17,9 +59,10 @@
 	width: 100%;
 	height: 1550px;
 	text-align: center;
+	background-color: #EEEEEE;
 }
 
-.TitleName1 {
+.TitleNameL {
 	color: black;
 	font-size: 35px;
 	text-align: left;
@@ -29,29 +72,62 @@
 .TitleBlock1 {
 	display: inline-block;
 	width: 100%;
-	height: 580px;
-	background-color: white;
+	height: 560px;
+	background-color: #EEEEEE;
 }
 
-.titleBlock img {
-	display: block;
+.TitleNameR {
+	color: black;
+	font-size: 35px;
+	text-align: left;
+	margin-left: 50%;
+}
+
+.TitleBlock2 {
+	display: inline-block;
 	width: 100%;
-	float: left;
+	height: 530px;
+	background-color: #EEEEEE;
 }
 
-.frogBlock img {
+.TitleBlock3 {
+	display: inline-block;
+	width: 100%;
+	height: 530px;
+	background-color: #EEEEEE;
+}
+
+.imgR img {
 	display: inline;
+	vertical-align: top;
 	width: 40%;
+	height: auto;
 	float: right;
 	margin-right: 75px;
 }
 
-.text {
+.imgL img {
+	display: inline;
+	width: 40%;
+	height: auto;
+	float: left;
+	margin-left: 75px;
+}
+
+.textL {
 	color: black;
 	text-align: left;
 	font-size: 23px;
 	margin-left: 100px;
-	margin-right: 900px;
+	margin-right: 50%;
+}
+
+.textR {
+	color: black;
+	text-align: left;
+	font-size: 23px;
+	margin-left: 50%;
+	margin-right: 100px;
 }
 
 .button {
@@ -61,26 +137,4 @@
 
 #p0 {
 	text-indent: 2em;
-}
-body {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 18px;
-}
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #000000;
-	text-align: center;
-}
-li a {
-	float: left;
-	color: white;
-	text-align: center;
-	padding: 25px;
-	text-decoration: none;
-}
-li a:hover {
-	background-color: #202020;
 }
